<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContactActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarSize"
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp">
            <Button
                android:id="@+id/buttonOk"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/ic_baseline_check_24"
                android:layout_gravity="end|center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_name1"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/buttonArrow"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/ic_baseline_arrow_back_24"
                android:layout_gravity="start|center" />
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>
    <RadioGroup
        android:id="@+id/rb"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent">
        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb1"
            android:textSize="20sp"/>
        <RadioButton
            android:layout_marginTop="10dp"
            android:id="@+id/rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb2"
            android:textSize="20sp"/>
    </RadioGroup>
    <EditText
        android:id="@+id/editText1"
        android:layout_marginTop="50dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rb"
        app:layout_constraintStart_toStartOf="@id/rb"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:hint="@string/hint1"/>
    <EditText
        android:id="@+id/editText2"
        android:layout_marginTop="30dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editText1"
        app:layout_constraintStart_toStartOf="@id/editText1"
        app:layout_constraintEnd_toEndOf="@id/editText1"
        android:hint="@string/hint2"/>
</androidx.constraintlayout.widget.ConstraintLayout>